networking/gateway-api/gateway-resources.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-api
  namespace: istio-system
spec:
  # addresses:
  # - value: 192.168.1.50
  #   type: IPAddress
  gatewayClassName: istio
  listeners:
  - name: http
    hostname: "*.fredgentech.com"
    port: 80
    protocol: HTTP
  - name: https
    protocol: HTTPS
    port: 443
    hostname:  "*.fredgentech.com"
    tls:
      mode: Terminate
      certificateRefs:
      - kind: Secret
        name: gateway-certs
    allowedRoutes:
      namespaces:
        from: All
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-ui
  namespace: argocd
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
  hostnames: 
  - "argocd.fredgentech.com"
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: argocd-server
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-ui
  namespace: monitoring
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
  hostnames: 
  - grafana.fredgentech.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-grafana 
      port: 80

---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: prom-ui
  namespace: monitoring
spec:
  parentRefs:
  - name: gateway-api
    namespace: istio-system
  hostnames: 
  - prom.fredgentech.com
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: prometheus-kube-prometheus-prometheus 
      port: 9090
